feat: adding schema registry to my kafka services